--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Layers of the Atmosphere</title>
+  <link rel="stylesheet" href="css/styles.css"/>
+</head>
+<body>
 
+<header>
+  <nav class="container">
+    <a href="index.html" class="logo">Atmosphere Layers</a>
+    <ul class="nav-links">
+      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="layers.html">Layers Overview</a></li>
+      <li><a href="facts.html">Interesting Facts</a></li>
+      <li><a href="quiz.html">Quiz</a></li>
+      <li><a href="about.html">About</a></li>
+    </ul>
+  </nav>
+</header>
+
+<main>
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Layers of Earth's Atmosphere</h1>
+      <p style="font-size:1.5rem; margin:1.8rem 0;">Discover the protective shields that make life on Earth possible</p>
+      <a href="layers.html" class="btn">Explore the Layers</a>
+    </div>
+  </section>
+
+  <div class="container">
+    <h2>Why the Atmosphere Matters</h2>
+    <p style="font-size:1.25rem; max-width:800px; margin:0 auto 3rem; text-align:center;">
+      Earth's atmosphere is a delicate, dynamic system of gases that protects us from harmful solar radiation, 
+      regulates temperature, and provides the oxygen we breathe. It is divided into five main layers, each with unique characteristics.
+    </p>
+
+    <div class="card-grid">
+      <div class="card">
+        <img src="images/troposphere.jpg" alt="Troposphere">
+        <div class="card-content">
+          <h3>Troposphere</h3>
+          <p>0 – 12 km<br>Where weather happens • Contains ~80% of atmosphere's mass</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="images/stratosphere-ozone.jpg" alt="Stratosphere">
+        <div class="card-content">
+          <h3>Stratosphere</h3>
+          <p>12 – 50 km<br>Ozone layer • Temperature increases with altitude</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="images/mesosphere-meteor.jpg" alt="Mesosphere">
+        <div class="card-content">
+          <h3>Mesosphere</h3>
+          <p>50 – 85 km<br>Meteors burn up here • Coldest layer</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
+
+<footer>
+  <p>© 2026 Earth Science Educational Project • Built with curiosity about our planet</p>
+</footer>
+
+<script src="js/script.js"></script>
+</body>
+</html>
