changeas to css and js file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Layers of the Atmosphere</title>
-  <link rel="stylesheet" href="css/styles.css"/>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
@@ -67,6 +67,6 @@
   <p>© 2026 Earth Science Educational Project • Built with curiosity about our planet</p>
 </footer>
 
-<script src="js/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
