--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Atmosphere Layers Quiz</title>
-  <link rel="stylesheet" href="css/styles.css"/>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
@@ -80,6 +80,6 @@
   <p>© 2026 Earth Science Educational Project</p>
 </footer>
 
-<script src="js/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
