--- a/about.html
+++ b/about.html
@@ -88,7 +88,11 @@
     <p>
         The Earth's atmosphere is divided into five main layers based on temperature changes.
         Each layer has unique characteristics and plays an important role in protecting and
-        supporting life on Earth.
+        supporting life on Earth.The Earth’s atmosphere is a thin layer of gases that surrounds our planet
+         and makes life possible. It provides the air we breathe, protects us from harmful radiation from the
+          Sun, and helps regulate the Earth’s temperature. Scientists divide the atmosphere into several 
+          layers based on changes in temperature and altitude. Each layer has unique characteristics and plays
+           an important role in protecting and supporting life on Earth.
     </p>
 
     <div class="layer">
@@ -97,6 +101,10 @@
         <p>
             The troposphere is the lowest layer and contains about 75% of the atmosphere’s mass
             and almost all water vapor. This is where humans live and where all weather occurs.
+            It begins at the Earth’s surface and extends up to about 8 to 15 kilometers, depending on location.
+             This layer contains most of the atmosphere’s air and nearly all of its water vapor, which makes it
+              the place where weather occurs. Clouds, rain, wind, and storms all form in the troposphere, making
+               it essential for supporting life on Earth.
         </p>
         <ul>
             <li>Clouds, rain, snow, and storms form here.</li>
@@ -110,7 +118,12 @@
         <p><strong>Height:</strong> 15 km to 50 km</p>
         <p>
             The stratosphere is above the troposphere and contains the ozone layer, which
-            absorbs harmful ultraviolet (UV) radiation from the Sun.
+            absorbs harmful ultraviolet (UV) radiation from the Sun.The stratosphere is the
+             second layer of the Earth’s atmosphere, located above the troposphere. It 
+             extends from about 15 kilometers to around 50 kilometers above the Earth’s surface.
+              This layer is important because it contains the ozone layer, which absorbs most of 
+              the Sun’s harmful ultraviolet radiation. Unlike the troposphere, temperatures in the
+               stratosphere increase with altitude, making it more stable and less turbulent.
         </p>
         <ul>
             <li>Temperature increases with altitude due to ozone absorbing UV rays.</li>
@@ -124,7 +137,14 @@
         <p><strong>Height:</strong> 50 km to 85 km</p>
         <p>
             The mesosphere is the coldest layer of the atmosphere. Most meteors burn up
-            in this layer before reaching Earth's surface.
+            in this layer before reaching Earth's surface.The stratosphere is the second
+            layer of the Earth’s atmosphere, located above the troposphere. It extends
+            from about 15 kilometers to around 50 kilometers above the Earth’s surface. 
+            This layer is important because it contains the ozone layer, which absorbs
+            most of the Sun’s harmful ultraviolet radiation. Unlike the troposphere,
+            temperatures in the stratosphere increase with altitude, making it more 
+            stable and less turbulent.
+
         </p>
         <ul>
             <li>Temperatures can drop to -90°C.</li>
@@ -139,6 +159,13 @@
         <p>
             The thermosphere is a very hot layer due to absorption of high-energy solar radiation.
             Despite high temperatures, it would not feel hot because the air is extremely thin.
+            The thermosphere is the fourth layer of the Earth’s atmosphere, lying above the
+            mesosphere and extending from about 85 kilometers to 600 kilometers above the
+            Earth’s surface. In this layer, temperatures rise significantly due to the absorption
+             of high-energy solar radiation. The thermosphere is also where phenomena like the 
+             auroras occur, and it is the region where satellites and the International Space 
+             Station orbit the Earth.
+
         </p>
         <ul>
             <li>The International Space Station orbits here.</li>
@@ -152,7 +179,11 @@
         <p><strong>Height:</strong> 600 km to 10,000 km</p>
         <p>
             The exosphere is the outermost layer and gradually fades into outer space.
-            Particles of gas can escape into space from this region.
+            Particles of gas can escape into space from this region.It contains very
+            few particles, mostly hydrogen and helium, which are so spread out that
+            they can travel hundreds of kilometers without colliding. The exosphere
+            acts as the transition between Earth’s atmosphere and space, gradually 
+            fading into the vacuum of space.
         </p>
         <ul>
             <li>Mainly composed of hydrogen and helium.</li>
