--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       <li><a href="layers.html">Layers Overview</a></li>
       <li><a href="facts.html">Interesting Facts</a></li>
       <li><a href="quiz.html">Quiz</a></li>
-      <li><a href="about.html">About</a></li>
+      <li><a href="images.html">Images</a></li>
+    
     </ul>
   </nav>
 </header>
